# taskR

./: .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml  pnpm-lock.yaml  pytest.ini
.github/workflows/: ci.yml
.serena/: project.yml
apps/taskr-ui/: README.md  index.html  package.json  tsconfig.json  vite.config.ts
apps/web/: README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
docs/: taskR-build-plan.md
docs/architecture/: structure.md
docs/design/: data-model.md  taskR-plane-integration-plan.md  taskr-audit.md  (+10 more)
scripts/: autopm_agent.py  billing_console.py  chaos_drill.py  check_toolfront_manifest.sh  deptx_migrate.sh  deptx_smoke.sh  dev.sh  dev_up.py  export_billing_report.py  host_bridge.sh  migrate.sh  ping_scraiv_linkage.py  preference_guardrail_check.py  preference_smoke.sh  retention_job.py  run_linkage_forwarder.py  run_local_llm.sh  runtime_check.sh  scheduler_agent.py  seed_alpha_workspace.py  seed_dedicated.py  seed_demo.py  send_hr_event.sh  smoke_integrations.py  start-taskr.sh
shared-packages/: dydact-chat-core-0.1.0.tgz  dydact-control-center-0.1.0.tgz  dydact-copilot-surfaces-0.1.0.tgz
shared-python/: toolfront_registry_client-0.1.0-py3-none-any.whl
toolfront-registry/: README.md  providers.json
toolfront_registry_client/: README.md  pyproject.toml
toolfront_registry_client/toolfront_registry_client/: __init__.py  __main__.py  client.py  manifest.py
toolfront_registry_client/toolfront_registry_client.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
(+359 files in other folders)
