[project]
name = "toolfront-registry-client"
version = "0.1.0"
description = "Shared ToolFront registry manifest loader and HTTP client"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "httpx>=0.27.0",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
cli = ["rich>=13.0"]

[project.scripts]
toolfront-registry-client = "toolfront_registry_client.__main__:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
